--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
 
 
 
-<p>Our website address is: https://huilehollandaise.github.io/information/.</p>
+<p>Our website address is: https://magasindhuilenrerlandais.github.io/commander/.</p>
 
 
 
